src/lexer/snapshots/rust_interpreter__lexer__test__assignments4.snap
---
source: src/lexer/mod.rs
expression: "(\"let result = add(five, ten);\", tokens)"
---
(
    "let result = add(five, ten);",
    [
        Let,
        Identifier(
            "result",
        ),
        Assign,
        Identifier(
            "add",
        ),
        LParen,
        Identifier(
            "five",
        ),
        Comma,
        Identifier(
            "ten",
        ),
        RParen,
        Semicolon,
        Eof,
    ],
)
